--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -51,6 +51,23 @@ jobs:
       
     - name: Build with Gradle
       run: ./gradlew build
+      
+    - name: Get debug file apk path
+      id: debugApk
+      run: echo "apkfile=$(find app/build/outputs/apk/debug/*.apk)" >> $GITHUB_OUTPUT
 
     - name: Run Tests
       run: ./gradlew lint test
+
+
+    - name: Upload Apk Build to Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+           name: build-artifacts
+           path: ${{ steps.debugApk.outputs.apkfile }}
+    
+    - name: Upload Test Result to Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+           name: test-artifacts
+           path: app/build/test-results
