--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -70,4 +70,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
            name: test-artifacts
-           path: app/build/test-results
+           path: app/build/reports
